fix render issue on mobile device

--- a/src/About.scss
+++ b/src/About.scss
@@ -2,14 +2,14 @@
   .presentation {
     text-align: justify;
     margin: auto;
-    width: 480px;
+    max-width: 480px;
   }
 
   .models {
     p {
       text-align: justify;
       margin: auto;
-      width: 480px;
+      max-width: 480px;
     }
   }
 }
